--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -8,78 +8,78 @@
 		},
 		"home": "Home",
 		"mainFeatures": "Real",
-		"otherFeatures": "Fun",
+		"otherFeatures": "Diversão",
 		"sidebarHint": "Discover all our features by clicking on the menu icon here! 😉",
-		"myAccount": "My account",
-		"switchAccount": "Switch account",
-		"welcomeTips": "Tips & infos",
-		"logout": "Log out",
-		"allRightsReserved": "All rights reserved.",
-		"dataPrivacy": "Data and privacy",
+		"myAccount": "Minha conta",
+		"switchAccount": "Trocar de conta",
+		"welcomeTips": "Dicas e informações",
+		"logout": "Sair",
+		"allRightsReserved": "Todos os direitos reservados.",
+		"dataPrivacy": "Dados e privacidade",
 		"legals": "Legal",
-		"terms": "Terms of Service",
+		"terms": "Termos de Serviço",
 		"changelog": "Changelog",
-		"news": "New",
-		"french": "French",
-		"english": "English",
-		"polish": "Polish",
-		"spanish": "Spanish",
-		"turkish": "Turkish",
-		"indonesian": "Indonesian",
-		"saved": "Saved",
-		"updated": "Updated",
-		"cleared": "Cleared",
-		"enable": "Enable",
-		"cancel": "Cancel",
-		"seconds": "second | second | seconds",
-		"questions": "question | question | questions",
-		"thatPage": "this page",
-		"yourProfile": "your profile",
-		"yourTwitterProfile": "your Twitter profile",
-		"loading": "Loading...",
-		"by": "by",
-		"affinitweetTeam": "The Affinitweet Team",
-		"cookiesBanner": "We use cookies 🍪 to provide the best experience. By continuing to use our website, you agree to our cookies policy. {button}",
-		"readMore": "Read more...",
-		"showMore": "Show more...",
-		"reviewUs": "Review us",
-		"lastRevision": "Last revision:",
-		"about": "About",
-		"partners": "Partners",
-		"madeWithLove": "Made with ❤️ in France.",
+		"news": "Novo",
+		"french": "Francês",
+		"english": "Inglês",
+		"polish": "Polonês",
+		"spanish": "Espanhol",
+		"turkish": "Turco",
+		"indonesian": "Indonésio",
+		"saved": "Salvo",
+		"updated": "Atualizado",
+		"cleared": "Limpo",
+		"enable": "Ativar",
+		"cancel": "Cancelar",
+		"seconds": "segundo | segundo | segundos",
+		"questions": "questão | questão | questões",
+		"thatPage": "essa página",
+		"yourProfile": "seu perfil",
+		"yourTwitterProfile": "seu perfil do Twitter",
+		"loading": "Carregando...",
+		"by": "por",
+		"affinitweetTeam": "O Time Affinitweet",
+		"cookiesBanner": "Nós utilizamos cookies 🍪 para proporcionar uma melhor experiência. Ao continuar utilizando nossa página, você está concordando com nossa política de cookies. {button}",
+		"readMore": "Ler mais...",
+		"showMore": "Mostrar mais...",
+		"reviewUs": "Nos avalie",
+		"lastRevision": "Última revisão:",
+		"about": "Sobre",
+		"partners": "Parceiros",
+		"madeWithLove": "Feito com ❤️ na França.",
 		"landing": {
-			"titleH1": "The best place to have fun with your friends on Twitter!",
-			"titleH2": "Check your statistics and more!",
-			"highlights": "Highlights",
-			"generatedResults": "Beautiful generated results",
-			"generatedResultsDescription": "Affinitweet is known for their very beautiful generated pictures, we are using the best tools for your results.",
-			"userConsentPrivacy": "User consent & privacy",
-			"userConsentPrivacyDescription": "Everything we do on Affinitweet with your data is explained in our privacy policy, no surprise, no auto-follow or auto-tweet.",
-			"worldFamousLeader": "World famous leader",
-			"worldFamousLeaderDescription": "Affinitweet opened in february 2014 and more than two million users use our services, everywhere in the world.",
-			"fastRealTimeResults": "Fast and real-time results",
-			"fastRealTimeResultsDescription": "We built Affinitweet on the last web technologies, so it's as fast as possible with real-time on feature pages.",
-			"noAdsNoVirus": "No intrusive ads, no virus",
-			"noAdsNoVirusDescription": "Affinitweet has been created just for fun, there's no virus and only 2 ads on the entire website (no popups, no redirects).",
-			"multilingualOpen": "Multilingual & open",
-			"multilingualOpenDescription": "Affinitweet is available in several different languages and everyone can contribute and add their own.",
-			"trustpilotH1": "Check our users' reviews on Trustpilot!",
-			"trustpilotH2": "We are rated {rate} by our users, will you be the next one to review us?",
-			"trustpilotButton": "See & submit a review",
-			"statistics": "Statistics",
-			"totalUsers": "2 million",
-			"totalUsersDescription": "Users trust us and use our services",
+			"titleH1": "O melhor lugar para se divertir com seus amigos no Twitter!",
+			"titleH2": "Confira suas estatísticas e muito mais!",
+			"highlights": "Destaques",
+			"generatedResults": "Belos resultados gerados",
+			"generatedResultsDescription": "Affinitweet é conhecido por suas lindas imagens geradas, nós estamos utilizando as melhores ferramentas para seus resultados.",
+			"userConsentPrivacy": "Consentimento do usuário e privacidade",
+			"userConsentPrivacyDescription": "Tudo que fazemos no Affinitweet com seus dados está explicado em nossa política de privacidade, sem surpresas, sem auto-follow ou auto-tweet.",
+			"worldFamousLeader": "Líder mundialmente famoso",
+			"worldFamousLeaderDescription": "Affinitweet abriu em fevereiro de 2014 e mais de dois milhões de usuários, no mundo todo, utilizam nossos serviços.",
+			"fastRealTimeResults": "Resultados rápidos e em tempo real",
+			"fastRealTimeResultsDescription": "Nós construímos o Affinitweet com as últimas tecnologias web, assim ele é o mais rápido possível real-time on feature pages.",
+			"noAdsNoVirus": "Sem anúncios intrusivos, sem vírus",
+			"noAdsNoVirusDescription": "Affinitweet foi criado apenas por diversão, não há nenhum vírus e apenas 2 anúncios em todo o site (sem popups, sem redirecionamentos).",
+			"multilingualOpen": "Multilíngue & aberto",
+			"multilingualOpenDescription": "Affinitweet está disponível em vários idiomas diferentes e todos podem contribuir e adicionar seus próprios idiomas.",
+			"trustpilotH1": "Confira as avaliações de nossos usuários no Trustpilot!",
+			"trustpilotH2": "Nós fomos avaliados {rate} pelos nossos usuários, você será o próximo a nos avaliar?",
+			"trustpilotButton": "Ver e enviar avaliações",
+			"statistics": "Estatísticas",
+			"totalUsers": "2 milhões",
+			"totalUsersDescription": "de usuários confiam em nós e usam nossos serviços",
 			"monthlyUsers": "60 000",
-			"monthlyUsersDescription": "Unique users which come back in average each month",
-			"totalFeatures": "3,5 million",
+			"monthlyUsersDescription": "usuários unicos que voltam em média a cada mês",
+			"totalFeatures": "3,5 milhões",
 			"totalFeaturesDoneDescription": "Features done since our opening in 2014",
 			"features": "Features",
-			"latestNews": "Latest news",
-			"getInTouch": "Get in touch!",
-			"getInTouchP1": "We are available at any time on our Twitter account {twitterName}.",
-			"getInTouchP2": "Follow us and be notified about updates and upcoming things!",
-			"getInTouchP3": "Feel free to send us a tweet or direct message if you have any question, suggestion or bug.",
-			"getInTouchP4": "For commercial purpose, you can contact us by email, see our {pageName} page."
+			"latestNews": "Últimas notícias",
+			"getInTouch": "Entre em contato!",
+			"getInTouchP1": "Nós estamos disponíveis a qualquer momento em nossa conta do Twitter {twitterName}.",
+			"getInTouchP2": "Nos siga e seja notificado sobre atualizações e coisas próximas!",
+			"getInTouchP3": "Sinta-se livre para nos enviar um tweet ou mensagem direta se você tiver qualquer dúvida, sugestão ou encontrou um bug.",
+			"getInTouchP4": "Para propósito comercial, você pode nos contatar por email, veja nossa página {pageName}."
 		},
 		"profile": {
 			"profile": "Profile",
