Fixes some translation doubts

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -9,7 +9,7 @@
 		"home": "Home",
 		"mainFeatures": "Real",
 		"otherFeatures": "Diversão",
-		"sidebarHint": "Discover all our features by clicking on the menu icon here! 😉",
+		"sidebarHint": "Descubra todos os nossos recursos clicando aqui no ícone do menu! 😉",
 		"myAccount": "Minha conta",
 		"switchAccount": "Trocar de conta",
 		"welcomeTips": "Dicas e informações",
@@ -18,7 +18,7 @@
 		"dataPrivacy": "Dados e privacidade",
 		"legals": "Legal",
 		"terms": "Termos de Serviço",
-		"changelog": "Changelog",
+		"changelog": "Registro de mudanças",
 		"news": "Novo",
 		"french": "Francês",
 		"english": "Inglês",
@@ -72,8 +72,8 @@
 			"monthlyUsers": "60 000",
 			"monthlyUsersDescription": "usuários unicos que voltam em média a cada mês",
 			"totalFeatures": "3,5 milhões",
-			"totalFeaturesDoneDescription": "Features done since our opening in 2014",
-			"features": "Features",
+			"totalFeaturesDoneDescription": "de recursos utilizados desde nossa abertura em 2014",
+			"features": "Funções",
 			"latestNews": "Últimas notícias",
 			"getInTouch": "Entre em contato!",
 			"getInTouchP1": "Nós estamos disponíveis a qualquer momento em nossa conta do Twitter {twitterName}.",
