Adds the profile translations

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -82,44 +82,44 @@
 			"getInTouchP4": "Para propósito comercial, você pode nos contatar por email, veja nossa página {pageName}."
 		},
 		"profile": {
-			"profile": "Profile",
-			"history": "History",
-			"preferences": "Preferences",
-			"monetization": "Monetization",
-			"language": "Language",
-			"addLanguage": "Add language...",
-			"contributeOnGitHub": "contribute on GitHub",
-			"account": "Account",
-			"viewProfile": "View on Twitter",
-			"followers": "Followers",
-			"followings": "Followings",
-			"noHistory": "No history data.",
-			"noAutoTweet": "No tweet will be published, never",
-			"autoTweet": "Automatically tweet results when ready",
-			"autoTweetDescription": "Check this option to auto-tweet results. Features can sometimes ask you to enable this option to be able to do them. A tweet will be published once results are ready, no more.",
-			"dontSaveResults": "No results will be saved",
-			"saveResults": "Results will be saved",
-			"saveResultsDescription": "Check this option to save your results (feature name + time). By default, Affinitweet do not store your results in its database.",
-			"ads": "Ads",
-			"adsDescription": "By default, ads are displayed, no background tasks are running.",
-			"mining": "Mining",
-			"miningDescription": "Your browser will mine as a background task, you'll see Affinitweet without ads.",
-			"unableToMine": "Unable to mine.",
-			"unableToMineDescription": "Script unreachable or ad blocker.",
-			"emojis": "Emojis pack",
+			"profile": "Perfil",
+			"history": "Histórico",
+			"preferences": "Preferências",
+			"monetization": "Monetização",
+			"language": "Linguagem",
+			"addLanguage": "Adicionar linguagem...",
+			"contributeOnGitHub": "contribua no GitHub",
+			"account": "Conta",
+			"viewProfile": "Ver no Twitter",
+			"followers": "Seguidores",
+			"followings": "Seguindo",
+			"noHistory": "Sem dados no histórico.",
+			"noAutoTweet": "Nenhum tweet será publicado, nunca",
+			"autoTweet": "Tweetar automaticamente os resultados quando estiverem prontos",
+			"autoTweetDescription": "Marque essa opção para auto-tweetar os resultados. Algumas brincadeiras podem te pedir para habilitar essa opção para conseguir realizá-las. Um tweet será publicado assim que os resultados estiverem prontos, e nenhum a mais.",
+			"dontSaveResults": "Nenhum resultado será salvo",
+			"saveResults": "Os resultados serão salvos",
+			"saveResultsDescription": "Marque essa opção para salvar seus resultados (nome da brincadeira + horário). Por padrão, o Affinitweet não guarda seus resultados no banco de dados.",
+			"ads": "Anúncios",
+			"adsDescription": "Por padrão, os anúncios são mostrados, não rodaremos nenhuma tarefa em segundo plano.",
+			"mining": "Mineirando",
+			"miningDescription": "Seu navegador irá mineirar em segundo plano, você verá Affinitweet sem anúncios.",
+			"unableToMine": "Incapaz de mineirar.",
+			"unableToMineDescription": "Script não alcançável ou bloqueador de anúncios ativo.",
+			"emojis": "Pacote de Emojis",
 			"iOSemojis": "iOS (Apple)",
-			"iOSemojisDescription": "Your results will be generated with iOS Emojis.",
+			"iOSemojisDescription": "Seus resultados serão gerados com Emojis de iOS.",
 			"androidEmojis": "Android (Google)",
-			"androidEmojisDescription": "Your results will be generated with Android Emojis.",
-			"clearHistory": "Clear history",
-			"clearHistoryConfirm": "Your history will be lost forever, are you sure?",
-			"clearingHistory": "Clearing history...",
-			"historyCleared": "History cleared!",
-			"clearHistoryDescription": "Clear your Affinitweet results history.",
-			"deleteAccount": "Delete account",
-			"deleteAccountConfirm1": "If something goes wrong, tell us on our Twitter account @affinitweet_ so we can be better next time!",
-			"deleteAccountConfirm2": "Your data will be lost forever. Nothing will remain about you on our servers and you'll be logged out, are you sure?",
-			"deleteAccountDescription": "Delete your Affinitweet account, everything will be lost."
+			"androidEmojisDescription": "Seus resultados serão gerados com Emojis de Android.",
+			"clearHistory": "Limpar histórico",
+			"clearHistoryConfirm": "Seu histórico será perdido para sempre, tem certeza?",
+			"clearingHistory": "Limpando histórico...",
+			"historyCleared": "Histórico limpo!",
+			"clearHistoryDescription": "Limpe o histórico de resultados do seu Affinitweet.",
+			"deleteAccount": "Apagar conta",
+			"deleteAccountConfirm1": "Se algo der errado, conte-nos em nosso Twitter @affinitweet_ para podermos melhorar da próxima vez!",
+			"deleteAccountConfirm2": "Seus dados serão perdidos para sempre. Nada irá restar sobre você nos nossos servidores, tem certeza?",
+			"deleteAccountDescription": "Apague sua conta no Affinitweet, tudo será perdido."
 		},
 		"features": {
 			"login": "Log in to continue...",
