Adds the features translations

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -122,68 +122,68 @@
 			"deleteAccountDescription": "Apague sua conta no Affinitweet, tudo será perdido."
 		},
 		"features": {
-			"login": "Log in to continue...",
-			"startFeature": "Let's go!",
-			"results": "Here's your results!",
-			"tweetResults": "Tweet results",
-			"tweetingResults": "Tweeting...",
-			"requireAutoTweetDescription": "Do you want to enable auto-tweet results? You'll be able to deactivate this option from your profile.",
-			"yesEnable": "Yes, enable",
-			"no": "No",
-			"retry": "Retry!",
+			"login": "Entre para continuar...",
+			"startFeature": "Vamos lá!",
+			"results": "Aqui estão os resultados!",
+			"tweetResults": "Tweetar resultados",
+			"tweetingResults": "Tweetando...",
+			"requireAutoTweetDescription": "Gostaria de habilitar o auto-tweet de resultados? Você poderá desativar essa opção a partir do seu perfil.",
+			"yesEnable": "Sim, habilitar",
+			"no": "Não",
+			"retry": "Tentar novamente!",
 			"errors": {
-				"time": "This feature have a %{cooldown} seconds cooldown. Please retry in %{remainingTime} {seconds}.",
-				"unknown": "An error has occured. Our team has been notified.",
-				"notEnoughData": "Not enough data.",
-				"accountProtected": "You can't use this feature while your account is protected.",
-				"refreshPage": "Please refresh the page.",
-				"timeout": "Timeout exceeded.",
-				"twitterError": "Twitter returned an error:",
+				"time": "Esse teste tem um intervalo de %{cooldown} segundos. Por favor, tente novamente em %{remainingTime} {seconds}.",
+				"unknown": "Um erro ocorreu. Nosso time foi notificado.",
+				"notEnoughData": "Dados insuficientes.",
+				"accountProtected": "Você não pode fazer esse teste enquanto sua conta for protegida.",
+				"refreshPage": "Por favor, atualize a página.",
+				"timeout": "Tempo limite excedido.",
+				"twitterError": "Twitter retornou um erro:",
 				"twitterErrors": {
-					"32": "Could not authenticate you.",
-					"34": "Sorry, that page does not exist.",
-					"50": "User not found.",
-					"63": "User has been suspended.",
-					"64": "Your account is suspended and is not permitted to access this feature.",
-					"87": "Client is not permitted to perform this action.",
-					"88": "Rate limit exceeded. Retry in 15 minutes",
-					"89": "Invalid or expired token. Please reconnect.",
-					"99": "Unable to verify your credentials.",
-					"130": "Over capacity.",
-					"131": "Internal error.",
-					"135": "Could not authenticate you.",
-					"144": "No status found with that ID.",
-					"179": "Sorry, you are not authorized to see this status.",
+					"32": "Não foi possível te autenticar.",
+					"34": "Desculpe, essa página não existe.",
+					"50": "Usuário não encontrado.",
+					"63": "Usuário suspenso.",
+					"64": "Sua conta está suspensa e não está permitia a acessar essa brincadeira.",
+					"87": "O cliente não está permitido a executar essa ação.",
+					"88": "Taxa limite excedida. Tente novamente em 15 minutos.",
+					"89": "Token de acesso inválido ou expirado. Por favor, se reconecte.",
+					"99": "Não foi possível verificar suas credenciais.",
+					"130": "Acima da capacidade.",
+					"131": "Erro interno.",
+					"135": "Não foi possível te autenticar.",
+					"144": "Nenhum status foi encontrado com esse ID.",
+					"179": "Desculpe, você não está autorizado a ver esse status.",
 					"185": "User is over daily status update limit.",
-					"186": "Tweet needs to be a bit shorter.",
-					"187": "Status is a duplicate.",
-					"220": "Your credentials do not allow access to this resource.",
-					"261": "Application cannot perform write actions.",
-					"326": "To protect our users from spam and other malicious activity, this account is temporarily locked."
+					"186": "O Tweet precisa ser um pouco mais curto.",
+					"187": "O status está duplicado.",
+					"220": "Suas credenciais não permitem o acesso a esse recurso.",
+					"261": "A aplicação não pode desempenhar ações de escrita.",
+					"326": "Para proteger nossos usuários de spam e outras atividades maliciosas, essa conta está temporariamente bloqueada."
 				}
 			},
-			"all-in-one": "ALL-IN-ONE includes all others features and makes an overall average. This overall average is the average of Color Matching, Friendships, Mentions, Common Sources and Common Friends averages. This feature evaluates your #affinitwees as precisely as possible with the targeted user.",
-			"friendships": "Friendships can view all your #affinitwees with the targeted user (ex: blocked or not, followed or not...).",
+			"all-in-one": "TUDO-EM-UM inclui todos os outros testes e faz uma média geral. Essa média geral é a media dos Match de Cores, Amizades, Menções, Fontes em Comum e Amigos em comuns. Esse teste avalia seus #affinitwees o mais precisamente possível com o usuário desejado.",
+			"friendships": "Amizades consegue ver todos os seus #affinitwees com o usuário desejado (ex: bloqueado ou não, seguido ou não...).",
 			"affinitweet-global-rank": "Affinitwees Global Rank is based on ALL-IN-ONE feature. It determinates your #affinitwees ranking from an existing result relative to all others results. Your #affinitwees are they higher than the average?",
-			"color-matching": "Color Matching is a new feature that calculates the percentage of similarity between the colors of your Twitter profile and those of another user. It's based on the color of your background and theme which are available on twitter.com/settings/design at the bottom of the page.",
-			"common-friends": "Common Friends is a feature which check users you follow and followed by the targeted user.",
-			"common-sources": "Common Sources check all your tweet sources (ex: TweetDeck, Android, iOS...) and compare them to the targeted user.",
-			"mentions": "Mentions count all mentions sent to the targeted user.",
-			"top-friends": "You want to know your Top Friends? Here we go!",
-			"famous-followers": "Discover your famous followers! Let's go!",
-			"valentine": "Try this new Affinitweet feature for few days only! Valentine feature allows you to know who should be your 2018 Valentine ;)",
-			"secret-crush": "Who is your Secret Crush?",
-			"hidden-twin": "Who is your Hidden Twin? Find it now!",
-			"stolen-kiss": "Who want to give you a Stolen Kiss? Try this feature to know it!",
-			"may-day": "Give a Lily-of-the-Valley to your friends to celebrate May Day!",
-			"halloween-duo": "With whom will you scare the most?",
-			"bunbun-transform": "Transform yourself into a cute bunny! Your Twitter profile picture will be updated!",
-			"pokemon-go-buddy": "What if you were a Buddy Pokémon Go? Discover it!",
-			"tweet-rate": "Calculate and compare your Tweet Rate with a targeted user!",
-			"first-to-follow": "Find out the date and time you followed one of your Twitter friends, and vice versa! Who followed the other one first?",
-			"emoji-mood": "What's your Emoji Mood? Which Emojis do you use the most?",
-			"christmas-gift": "Find out what gift is waiting for you this year for Christmas! 🎁",
-			"new-years-kiss": "Who are you going to kiss this year under the mistletoe? 😘"
+			"color-matching": "O Match de Cores é um novo teste que calcula a porcentagem de similaridade entre as cores do seu perfil do Twitter e as de outro usuário. É baseado nas cores de fundo e do tema que estão disponíveis em twitter.com/settings/design no final da página.",
+			"common-friends": "Amigos em Comum é um teste que verifica os usuários que você e o usuário desejado seguem.",
+			"common-sources": "Fontes em Comum verifica todas as fontes de seus tweets (ex: TweetDeck, Android, iOS...) e as compara com as do usuário desejado.",
+			"mentions": "Menções conta todas as menções enviadas para o usuário desejado.",
+			"top-friends": "Você quer saber os seus Maiores Amigos? Então vamos!",
+			"famous-followers": "Descubra seus seguidores famosos! Vamos lá!",
+			"valentine": "Faça esse novo teste do Affinitweet disponível por apenas alguns dias! O testo do(a) Amado(a) te permite saber quem deveria ser seu amor em 2019 ;)",
+			"secret-crush": "Quem é seu Crush Secreto?",
+			"hidden-twin": "Quem é seu Gêmeo Escondido? Descubra agora!",
+			"stolen-kiss": "Quem quer te roubar um beijo? Faça o teste e descubra!",
+			"may-day": "Dê um Lírio-do-vale para seus amigos para celebrar o 1° de Maio!",
+			"halloween-duo": "Com quem você vai assustar mais?",
+			"bunbun-transform": "Se transforme em um coelho fofinho! Sua foto de perfil no Twitter será atualizada!",
+			"pokemon-go-buddy": "E se você fosse um parceiro no Pokémon Go? Descubra!",
+			"tweet-rate": "Calcule e compare sua Calculate and compare your Tweet Rate with a targeted user!",
+			"first-to-follow": "Descubra a data e horário que você seguiu um de seus amigos do Twitter e vice-versa! Quem seguiu o outro primeiro?",
+			"emoji-mood": "Qual é seu Humor de Emojis? Quais Emojis você usa mais?",
+			"christmas-gift": "Descubra qual presente está esperando por você nesse Natal! 🎁",
+			"new-years-kiss": "Quem você irá beijar esse ano sob o visco? 😘"
 		},
 		"legal": {
 			"intro": "In accordance with Article 6 of the law n° 2004-575 of 21 June 2004 on trust in the digital economy, users of the site {site} are informed of the identity of the various parties involved in its implementation and monitoring:",
@@ -474,8 +474,8 @@
 		"notFollowingYou": "{{user}} is not following you...",
 		"youFollowed": "You followed {{user}}: ",
 		"followedYou": "{{user}} followed you: ",
-		"dateFormat": "on {{month}}/{{day}}/{{year}} at {{hour}}:{{minute}}:{{second}}",
-		"dateFormat2": "on {{month}}/{{day}}/{{year}} at {{hour}}h",
+		"dateFormat": "on {{day}}/{{month}}/{{year}} at {{hour}}:{{minute}}:{{second}}",
+		"dateFormat2": "on {{day}}/{{month}}/{{year}} at {{hour}}h",
 		"unknownFeature": "Unknown feature.",
 		"selfUsername": "Type a different username than yourself.",
 		"badUsername": "Bad username.",
